# Schtabtag

./: .gitignore  LICENSE  README.md  launcher.py  main.py  pyproject.toml
examples/: isolangs.py  neko.py  rank.py
imports/: binary.py  language_check.py  yt.py
