[tool.poetry]
name = "Schtabtag"
version = "1.0.0"
description = "A Discord Bot made in Python"
authors = ["Ahmed Amr"]

[tool.poetry.dependencies]
python = "^3.8"
wikipedia = "^1.4.0"
psutil = "^5.9.0"
pet-pet-gif = "^1.0.2"
nextcord = "^2.0.0-alpha.7"
easy-pil = "^0.1.5"
pymongo = "^4.0.1"
dnspython = "^2.2.0"
translators = "^5.0.1"
requests = "^2.27.1"
colorama = "^0.4.4"
"async-nekos.life-wrapper" = { git = "https://github.com/Nekos-life/Async-nekos.life-wrapper.git" }
tkinter-tooltip = "^1.3.0"
nextcord-ext-menus = "^1.5.0"
PyNaCl = "^1.5.0"
aiodns = "^3.0.0"
Brotli = "^1.0.9"
orjson = "^3.6.6"
google-api-python-client = "^2.37.0"
asyncpraw = "^7.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
